# TmpAPI

./: .gitignore  README.md  config.yaml  pyproject.toml
src/tmpapi/: __init__.py  cli.py  config.py  schemas.py  server.py
src/tmpapi/browser/: manager.py
src/tmpapi/providers/: _utils.py  base.py  chatglm.py  deepseek.py  doubao.py
tests/: langchain_demo.py
